    - Tutoral techs reworked
    - Hydro plant and Clarifier removed from tutorial
    - Hydro plant and Clarifier recipes reverted to default
    - Brown algae processing moved later in the tech tree
    - Lithia salt and Sodium carbonate moved to brown algae processing
    - Bob's Tech setting Science Pack colors update default value set to false. Currently only applies if SCT is disabled
---------------------------------------------------------------------------------------------------
Version: 0.5.0
Date: 16.12.2020
  Changes:
    - Factorio 1.1 update
    - Worms will only spawn if map setting Enemy Bases is enabled
    - Blue algae liquefaction recipe unlock moved from Oil processing to Gas and oil extraction
    - Blue algae liquefaction recipe moved from Oil Refinery to Oil and Gas Separator
    - Prerequisite Chemical processing 1 removed from Steel processing
    - Enriched fuel block fuel value increased from 24MJ to 50MJ
    - Added setting for preferred landfill type (if LandfillPainting is installed)
    - Merged in A Sea Block Config mod
    - Hydro Plant 1 now requires Basic Circuit Boards instead of Electronic Circuits
    - Removed Electronic Circuits from starting resources
    - Moved recipe Insulated Wire from Electronics to Rubbers
    - Recipe Resin > Rubber unlocked by Rubbers rather than being available from start
    - Removed prerequisite Advanced Oil Processing from technology Rubbers
    - Recipe Liquid Rubber > Rubber unlocked by technology Rubber only instead of also being unlocked by technology Rubbers
    - Moved Algae Farm 2 from Green Algae Processing to Blue Algae Processing
    - Moved Green Algae Processing earlier in the tech tree
    - Moved Water Treatment earlier in the tech tree
    - Enforced removal of Bob's Chemical Plants and Electrolysers
    - Disabled recipe Stiratite ore crushing by hand and Saphirite ore crushing by hand
    - Artificial fish water can now be made in a regular chemical plant
  Bugfixes: